--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h1 class="text-uppercase text-center" style="color:#f96816; font-weight: 200;">Anuncios de la asocia</h1>
+    <h1 class="text-uppercase text-center page-title">Anuncios de la asocia</h1>
   </div>
 </div>
 <%# Esta deberia de ser la vista para los miembros de la asocia %>
