--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <%# Roboto Font %>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,100,300,900,400italic' rel='stylesheet' type='text/css'>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta name="theme-color" content="#2b2b2b">
+  <meta name="author" content="Asociación de Estudiantes de la Escuela de Ciencias de la Computación e Informática">
+  <meta name="keywords" content="AECCI, UCR, aecci, ECCI, ecci, computacion, informatica">
+  <meta name="description" content="Sitio web de la Asociación de Estudiantes de la Escuela de Ciencias de la Computación e Informática (AECCI) de la Universidad de Costa Rica.">
   <title>
     <%= content_for?(:title) ? yield(:title) | 'AECCI | Universidad de Costa Rica' : 'AECCI | Universidad de Costa Rica' %>
   </title>
