--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -6,8 +6,7 @@
 </div>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h1>Agregar un examen</h1>
-    <hr/>
+    <h1 class="text-uppercase text-center page-title">Agregar un examen</h1>
   </div>
 </div>
 <%= render 'form' %>
