--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -2,15 +2,14 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <div class="btn-group">
-      <%= link_to 'Mostrar', @ad, class:'text-footer' %> |
-      <%= link_to 'Regresar', ads_path, class:'text-footer' %>
+      <%= link_to 'Mostrar', @ad, class: 'text-footer' %> |
+      <%= link_to 'Regresar', ads_path, class: 'text-footer' %>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h1>Edición del anuncio</h1>
-    <hr/>
+    <h1 class="text-uppercase text-center page-title">Edición del anuncio</h1>
   </div>
 </div>
 
