--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,13 +1,12 @@
 <br/>
 <div class="row">
   <div class="col-md-1 col-md-offset-1">
-    <%= link_to 'Regresar', ads_path, class:'text-footer' %>
+    <%= link_to 'Regresar', ads_path, class: 'text-footer' %>
   </div>
 </div>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h1>Crear un anuncio</h1>
-    <hr/>
+    <h1 class="text-uppercase text-center page-title">Crear un anuncio</h1>
   </div>
 </div>
 <%= render 'form' %>
