--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h1>Cursos impartidos en la ECCI</h1>
-    <hr/>
+    <h1 class="text-uppercase text-center page-title">Cursos impartidos en la ECCI</h1>
+    <br/>
   </div>
 </div>
 <div class="row">
