--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1 col-xs-12">
-    <h1>Administrador de exámenes</h1>
-    <hr/>
+    <h1 class="text-uppercase text-center page-title">Administrador de exámenes</h1>
   </div>
 </div>
 <div class="row">
